--- a/views/app.haml
+++ b/views/app.haml
@@ -6,5 +6,5 @@
 				- (0...81).each do |i|
 					%li
 						%label= i
-		%img.tapemeasure_needle(src="//imga.nxjimg.com/emp_image/apparel/measurements/tapemeasure/pointer.gif")
+		%img.tapemeasure_needle{:src => "//imga.nxjimg.com/emp_image/apparel/measurements/tapemeasure/pointer.gif"}
 	%input.nxj_input{:placeholder => "15", :id => "measurementInput"}
